--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 ###############################
-## ShareFile Settings.
+## TestObject Settings.
 ###############################
-TestData.sharefile.username=yashodhan.fadnavis@citrix.com
-TestData.sharefile.password=Share1234
-TestData.sharefile.subdomain=osdeng
+TestObject.APIKEY=C2F365BEAC704F83B54271502BFE0871
+
+
 
 ###############################
 ## HTML5 Settings
